Test images added; content added to index page

--- a/index.html
+++ b/index.html
@@ -3,4 +3,27 @@
   <head>
     <title>Wayne's Garden 2017</title>
   </head>
+  <body>
+    <div class="heading">
+      <h1>Welcome to Wayne's Garden 2017</h1>
+      <h2>The best garden on the Randolph/Avon border</h2>
+      <p>Time to see what goodies Wayne is growing this year</p>
+    </div>
+    <div class="plant">
+      <img src="images/news_van1.jpg">
+    </div>
+    <div class="plant">
+      <img src="images/news_van2.jpg">
+    </div>
+    <div class="plant">
+      <img src="images/news_van3.jpg">
+    </div>
+    <div class="plant">
+      <img src="images/cover_pic.jpg">
+    </div>
+  </body>
+  <footer>
+    <p>Created by: Wil Santana</p>
+    <p>Contact information: <a href="mailto:santana.wil@gmail.com">Email Wil to develop your site</a>
+  </footer>
 </html>
