Stylesheet applied; images resized

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Wayne's Garden 2017</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="heading">
